# libnfs

examples/: Makefile.am  nfsclient-bcast.c  nfsclient-sync.c
include/: libnfs-private.h  libnfs-xdr.h  libnfs-zdr.h
lib/: Makefile.am  init.c  libnfs-xdr.c  libnfs-zdr.c  pdu.c  socket.c
mount/: Makefile.am  mount.c
nfs/: Makefile.am  nfs.c  nfsacl.c
nlm/: Makefile.am  nlm.c
portmap/: Makefile.am  portmap.c
rquota/: Makefile.am  rquota.c
